# RustyTunnel

./: .gitignore  CLIENT_GUIDE.md  Cargo.toml  DEPLOYMENT.md  QUICKSTART.md  README.md
client/: Cargo.toml
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/frontend/: index.html  package.json  tailwind.config.js  vite.config.js
client/src-tauri/frontend/src/: App.jsx  api.js  index.css
client/src-tauri/frontend/src/components/: NodeSelector.jsx  SettingsPanel.jsx  StatsDisplay.jsx
client/src-tauri/frontend/src/pages/: DashboardPage.jsx  LoginPage.jsx
client/src-tauri/src/: commands.rs  error.rs  main.rs  models.rs  state.rs
server/: Cargo.toml
server/src/: config.rs  crypto.rs  device.rs  error.rs  lib.rs  main.rs  peer.rs  server.rs
