[package]
name = "rusty-tunnel-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boringtun = "0.6.0"
clap = { version = "4.5.1", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
tun = "0.6.1"
toml = "0.8.10"
serde = { version = "1.0.197", features = ["derive"] }
rand = "0.8.5"
anyhow = "1.0.81"
ctrlc = "3.4.4"
socket2 = "0.5.6"
env_logger = "0.11.2"
log = "0.4.21"
x25519-dalek = "2.0.0-rc.3"
base64 = "0.21.7"
